// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                href="#/"
                onClick={[Function]}
              >
                Intro
              </a>
            </li>
            <li>
              <a
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                What is monkey patching?
              </a>
            </li>
            <li>
              <a
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Why React?
              </a>
            </li>
            <li>
              <a
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                React highlight updates
              </a>
            </li>
            <li>
              <a
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                React fastclick
              </a>
            </li>
            <li>
              <a
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Material UI button effect
              </a>
            </li>
            <li>
              <a
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Simple patch function
              </a>
            </li>
            <li>
              <a
                href="#/llamify/"
                onClick={[Function]}
              >
                Llamify
              </a>
            </li>
            <li>
              <a
                href="#/scramble/"
                onClick={[Function]}
              >
                Scramble
              </a>
            </li>
            <li>
              <a
                href="#/internationalization/"
                onClick={[Function]}
              >
                Internationalization
              </a>
            </li>
            <li>
              <button
                className="remove-button"
                data-no-patch={true}
                onClick={[Function]}
              >
                Remove monkey patch.
              </button>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
          >
            Intro
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Monkey Patching React
                  </h2>
                  <p>
                    Hello! My name is Jake, and today I'm going to show you some totally not hacks at all, believe me, I promise, really not hacks... awesome monkey patching of React.
                  </p>
                  <h2>
                    Want more awesome stuff?
                  </h2>
                  <p>
                    Here's some links you might enjoy:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://github.com/JakeSidSmith/react-monkey-patching"
                        target="_blank"
                        title="This demo"
                      >
                        This demo - github.com/JakeSidSmith/react-monkey-patching
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="My Blog"
                      >
                        My Blog - jakesidsmith.com
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith"
                        target="_blank"
                        title="My GitHub"
                      >
                        My GitHub - github.com/jakesidsmith
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith"
                        target="_blank"
                        title="My Twitter"
                      >
                        My Twitter - twitter.com/jakesidsmith
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="React Highlight Updates"
                      >
                        React Highlight Updates (we'll cover this shortly) - npmjs.com/package/react-highlight-updates
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="React Fastclick"
                      >
                        React Fastclick (we'll cover this briefly also) - npmjs.com/package/react-fastclick
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`App should match snapshot when llamified 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                href="#/"
                onClick={[Function]}
              >
                Llama
              </a>
            </li>
            <li>
              <a
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                Llama llama llama llama?
              </a>
            </li>
            <li>
              <a
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Llama Llama?
              </a>
            </li>
            <li>
              <a
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                Llama llama llama
              </a>
            </li>
            <li>
              <a
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                Llama llama
              </a>
            </li>
            <li>
              <a
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Llama LLAMA llama llama
              </a>
            </li>
            <li>
              <a
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Llama llama llama
              </a>
            </li>
            <li>
              <a
                href="#/llamify/"
                onClick={[Function]}
              >
                Llama
              </a>
            </li>
            <li>
              <a
                href="#/scramble/"
                onClick={[Function]}
              >
                Llama
              </a>
            </li>
            <li>
              <a
                href="#/internationalization/"
                onClick={[Function]}
              >
                Llama
              </a>
            </li>
            <li>
              <button
                className="remove-button"
                data-no-patch={true}
                onClick={[Function]}
              >
                Remove monkey patch.
              </button>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
          >
            Llama
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Llama Llama Llama
                  </h2>
                  <p>
                    Llama! Llama llama llama Llama, llama llama LLAMA'llama llama llama llama llama llama llama llama llama llama llama, llama llama, LLAMA llama, llama llama llama... llama llama llama llama Llama.
                  </p>
                  <h2>
                    Llama llama llama llama?
                  </h2>
                  <p>
                    Llama'llama llama llama llama llama llama:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://github.com/JakeSidSmith/react-monkey-patching"
                        target="_blank"
                        title="Llama llama"
                      >
                        Llama llama - llama.llama/Llama/llama-llama-llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama/llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama/llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="Llama Llama Llama"
                      >
                        Llama Llama Llama (llama'llama llama llama llama) - llama.llama/llama/llama-llama-llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama (llama'llama llama llama llama llama) - llama.llama/llama/llama-llama
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`App should match snapshot when scrambled 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                href="#/"
                onClick={[Function]}
              >
                Itnro
              </a>
            </li>
            <li>
              <a
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                What is mnoeky phtciang?
              </a>
            </li>
            <li>
              <a
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Why Racet?
              </a>
            </li>
            <li>
              <a
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                Racet hliigghht utepads
              </a>
            </li>
            <li>
              <a
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                Racet ftcislack
              </a>
            </li>
            <li>
              <a
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Maiertal UI bouttn eeffct
              </a>
            </li>
            <li>
              <a
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Sipmle patch fnctioun
              </a>
            </li>
            <li>
              <a
                href="#/llamify/"
                onClick={[Function]}
              >
                Llmafiy
              </a>
            </li>
            <li>
              <a
                href="#/scramble/"
                onClick={[Function]}
              >
                Smrclbae
              </a>
            </li>
            <li>
              <a
                href="#/internationalization/"
                onClick={[Function]}
              >
                Iiaterniaoozttnialnn
              </a>
            </li>
            <li>
              <button
                className="remove-button"
                data-no-patch={true}
                onClick={[Function]}
              >
                Remove monkey patch.
              </button>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
          >
            Itnro
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Mnoeky Phtciang Racet
                  </h2>
                  <p>
                    Hello! My nmae is Jake, and tadoy I'm gniog to sohw you some ttoally not hakcs at all, blievee me, I poirmse, raelly not hakcs... aseowme mnoeky phtciang of Racet.
                  </p>
                  <h2>
                    Want mroe aseowme sfutf?
                  </h2>
                  <p>
                    Here's some likns you mhigt enjoy:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://github.com/JakeSidSmith/react-monkey-patching"
                        target="_blank"
                        title="This demo"
                      >
                        This demo - ghutib.com/JaidtkmieSSh/racet-mnoeky-phtciang
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="My Bolg"
                      >
                        My Bolg - jaidtkmiessh.com
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith"
                        target="_blank"
                        title="My GHutib"
                      >
                        My GHutib - ghutib.com/jaidtkmiessh
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith"
                        target="_blank"
                        title="My Tweittr"
                      >
                        My Tweittr - tweittr.com/jaidtkmiessh
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="Racet Hliigghht Utepads"
                      >
                        Racet Hliigghht Utepads (we'll cvoer this sthorly) - njmps.com/pkaacge/racet-hliigghht-utepads
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="Racet Ftcislack"
                      >
                        Racet Ftcislack (we'll cvoer this bifelry also) - njmps.com/pkaacge/racet-ftcislack
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
